// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for isPrimary: false, isSecondary: false, isCascade: false and theme: dark 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(a) {
    all: unset;
    align-self: flex-start;
    font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    cursor: pointer;
    border-radius: 4px;
    padding: clamp(8px, 0.5vw + 6px, 16px) !important;
    margin-inline: calc(clamp(8px, 0.5vw + 6px, 16px) * -1) !important;
    color: #FBFCFF;
    text-decoration: underline;
    text-decoration-color: transparent;
    transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  ::slotted(a[aria-current]) {
    text-decoration: underline;
  }
  ::slotted(a::-moz-focus-inner) {
    border: 0;
  }
  ::slotted(a:focus) {
    outline: 0;
  }
  ::slotted(a:focus-visible) {
    outline: 2px solid #1A44EA;
    outline-offset: -2px;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
@media(min-width:760px) {
}

@media(max-width:759px) {
}

@media(hover:hover) {
    ::slotted(a:hover) {
      text-decoration-color: inherit;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: rgba(0,0,0,.01);
  }
  .button {
    padding: clamp(8px, 0.5vw + 6px, 16px);
    margin: 0 calc(clamp(8px, 0.5vw + 6px, 16px) * -1);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: none;
    }
}

@media(max-width:759px) {
    .drawer {
      display: none;
    }
}
"
`;

exports[`getComponentCss() should return correct css for isPrimary: false, isSecondary: false, isCascade: true and theme: auto 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(*:not([primary],[cascade])) {
    display: none;
  }
  ::slotted(a) {
    all: unset;
    align-self: flex-start;
    font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    cursor: pointer;
    border-radius: 4px;
    padding: clamp(8px, 0.5vw + 6px, 16px) !important;
    margin-inline: calc(clamp(8px, 0.5vw + 6px, 16px) * -1) !important;
    color: #010205;
    text-decoration: underline;
    text-decoration-color: transparent;
    transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  ::slotted(a[aria-current]) {
    text-decoration: underline;
  }
  ::slotted(a::-moz-focus-inner) {
    border: 0;
  }
  ::slotted(a:focus) {
    outline: 0;
  }
  ::slotted(a:focus-visible) {
    outline: 2px solid #1A44EA;
    outline-offset: -2px;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
@media(min-width:760px) {
    slot {
      display: contents;
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
}

@media (prefers-color-scheme: dark) {
    ::slotted(a:focus-visible) {
      outline-color: #1A44EA;
    }
    ::slotted(a) {
      color: #FBFCFF;
    }
}

@media(hover:hover) {
    ::slotted(a:hover) {
      text-decoration-color: inherit;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .button {
    display: none;
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
    }
}

@media (prefers-color-scheme: dark) {
    .scroller {
      background: rgba(0,0,0,.01);
    }
}
"
`;

exports[`getComponentCss() should return correct css for isPrimary: false, isSecondary: true, isCascade: false and theme: light 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(a) {
    all: unset;
    align-self: flex-start;
    font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    cursor: pointer;
    border-radius: 4px;
    padding: clamp(8px, 0.5vw + 6px, 16px) !important;
    margin-inline: calc(clamp(8px, 0.5vw + 6px, 16px) * -1) !important;
    color: #010205;
    text-decoration: underline;
    text-decoration-color: transparent;
    transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  ::slotted(a[aria-current]) {
    text-decoration: underline;
  }
  ::slotted(a::-moz-focus-inner) {
    border: 0;
  }
  ::slotted(a:focus) {
    outline: 0;
  }
  ::slotted(a:focus-visible) {
    outline: 2px solid #1A44EA;
    outline-offset: -2px;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
@media(min-width:760px) {
    slot {
      display: flex;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      height: fit-content;
      animation: slide-up-desktop-secondary var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
      grid-area: 2/2/auto/-2;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
    }
}

@media(max-width:759px) {
    slot {
      z-index: 0;
      display: flex;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      grid-area: 4/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-mobile var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
    }
    h2 {
      font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
      display: block;
      grid-area: 2/3;
      place-self: center;
      z-index: 2;
      margin: 0;
      padding-inline: 16px;
      max-width: 100%;
      box-sizing: border-box;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      color: #010205;
    }
}

@media(hover:hover) {
    ::slotted(a:hover) {
      text-decoration-color: inherit;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .button {
    padding: clamp(8px, 0.5vw + 6px, 16px);
    margin: 0 calc(clamp(8px, 0.5vw + 6px, 16px) * -1);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: grid;
      position: absolute;
      inset: 0;
      inset-inline-start: clamp(338px, 210px + 18vw, 640px);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
    }
    .scroller {
      grid-area: 1/1/-1/-1;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
      grid-area: 1/1/-1/-1;
    }
    .scroller::before {
      z-index: 1;
      content: "";
      position: sticky;
      top: 0;
      grid-area: 1/1/4/-1;
      background: linear-gradient(180deg,#FFF 0%,#FFF 65%,transparent 100%);
    }
    .button {
      display: none;
    }
}
"
`;

exports[`getComponentCss() should return correct css for isPrimary: false, isSecondary: true, isCascade: true and theme: light 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(*:not([primary],[cascade])) {
    display: none;
  }
  ::slotted(a) {
    all: unset;
    align-self: flex-start;
    font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    cursor: pointer;
    border-radius: 4px;
    padding: clamp(8px, 0.5vw + 6px, 16px) !important;
    margin-inline: calc(clamp(8px, 0.5vw + 6px, 16px) * -1) !important;
    color: #010205;
    text-decoration: underline;
    text-decoration-color: transparent;
    transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  ::slotted(a[aria-current]) {
    text-decoration: underline;
  }
  ::slotted(a::-moz-focus-inner) {
    border: 0;
  }
  ::slotted(a:focus) {
    outline: 0;
  }
  ::slotted(a:focus-visible) {
    outline: 2px solid #1A44EA;
    outline-offset: -2px;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
@media(min-width:760px) {
    slot {
      display: contents;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      height: fit-content;
      animation: slide-up-desktop-secondary var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
      grid-area: 2/2/auto/-2;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
    }
}

@media(max-width:759px) {
    slot {
      z-index: 0;
      display: contents;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      grid-area: 4/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-mobile var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
    }
    h2 {
      font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
      display: block;
      grid-area: 2/3;
      place-self: center;
      z-index: 2;
      margin: 0;
      padding-inline: 16px;
      max-width: 100%;
      box-sizing: border-box;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      color: #010205;
    }
}

@media(hover:hover) {
    ::slotted(a:hover) {
      text-decoration-color: inherit;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .button {
    display: none;
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: contents;
      position: absolute;
      inset: 0;
      inset-inline-start: clamp(338px, 210px + 18vw, 640px);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
    }
    .scroller {
      grid-area: 1/1/-1/-1;
      display: contents;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
      grid-area: 1/1/-1/-1;
    }
    .scroller::before {
      z-index: 1;
      content: "";
      position: sticky;
      top: 0;
      grid-area: 1/1/4/-1;
      background: linear-gradient(180deg,#FFF 0%,#FFF 65%,transparent 100%);
    }
    .button {
      display: none;
    }
}
"
`;

exports[`getComponentCss() should return correct css for isPrimary: true, isSecondary: false, isCascade: false and theme: light 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(a) {
    all: unset;
    align-self: flex-start;
    font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    cursor: pointer;
    border-radius: 4px;
    padding: clamp(8px, 0.5vw + 6px, 16px) !important;
    margin-inline: calc(clamp(8px, 0.5vw + 6px, 16px) * -1) !important;
    color: #010205;
    text-decoration: underline;
    text-decoration-color: transparent;
    transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  ::slotted(a[aria-current]) {
    text-decoration: underline;
  }
  ::slotted(a::-moz-focus-inner) {
    border: 0;
  }
  ::slotted(a:focus) {
    outline: 0;
  }
  ::slotted(a:focus-visible) {
    outline: 2px solid #1A44EA;
    outline-offset: -2px;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
@media(min-width:760px) {
    slot {
      display: flex;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      height: fit-content;
      animation: slide-up-desktop-primary var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
    ::slotted(*:not([secondary])) {
      display: none;
    }
}

@media(hover:hover) {
    ::slotted(a:hover) {
      text-decoration-color: inherit;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .button {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
    }
    .back {
      width: fit-content;
      height: fit-content;
      margin-inline-start: -4px;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
    }
    .back {
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: center flex-start;
      z-index: 2;
    }
}
"
`;

exports[`getComponentCss() should return correct css for isPrimary: true, isSecondary: false, isCascade: true and theme: light 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(*:not([primary],[cascade])) {
    display: none;
  }
  ::slotted(a) {
    all: unset;
    align-self: flex-start;
    font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    cursor: pointer;
    border-radius: 4px;
    padding: clamp(8px, 0.5vw + 6px, 16px) !important;
    margin-inline: calc(clamp(8px, 0.5vw + 6px, 16px) * -1) !important;
    color: #010205;
    text-decoration: underline;
    text-decoration-color: transparent;
    transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  ::slotted(a[aria-current]) {
    text-decoration: underline;
  }
  ::slotted(a::-moz-focus-inner) {
    border: 0;
  }
  ::slotted(a:focus) {
    outline: 0;
  }
  ::slotted(a:focus-visible) {
    outline: 2px solid #1A44EA;
    outline-offset: -2px;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
@media(min-width:760px) {
    slot {
      display: contents;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      height: fit-content;
      animation: slide-up-desktop-primary var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
    ::slotted(*:not([secondary])) {
      display: none;
    }
}

@media(hover:hover) {
    ::slotted(a:hover) {
      text-decoration-color: inherit;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .button {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
    }
    .back {
      width: fit-content;
      height: fit-content;
      margin-inline-start: -4px;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
    }
    .back {
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: center flex-start;
      z-index: 2;
    }
}
"
`;

exports[`getComponentCss() should return correct css for isPrimary: true, isSecondary: true, isCascade: false and theme: light 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(a) {
    all: unset;
    align-self: flex-start;
    font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    cursor: pointer;
    border-radius: 4px;
    padding: clamp(8px, 0.5vw + 6px, 16px) !important;
    margin-inline: calc(clamp(8px, 0.5vw + 6px, 16px) * -1) !important;
    color: #010205;
    text-decoration: underline;
    text-decoration-color: transparent;
    transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  ::slotted(a[aria-current]) {
    text-decoration: underline;
  }
  ::slotted(a::-moz-focus-inner) {
    border: 0;
  }
  ::slotted(a:focus) {
    outline: 0;
  }
  ::slotted(a:focus-visible) {
    outline: 2px solid #1A44EA;
    outline-offset: -2px;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
@media(min-width:760px) {
    slot {
      display: flex;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      height: fit-content;
      animation: slide-up-desktop-primary var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
      grid-area: 2/2/auto/-2;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
    }
}

@media(max-width:759px) {
    slot {
      z-index: 0;
      display: contents;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      grid-area: 4/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-mobile var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
    }
    h2 {
      font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
      display: block;
      grid-area: 2/3;
      place-self: center;
      z-index: 2;
      margin: 0;
      padding-inline: 16px;
      max-width: 100%;
      box-sizing: border-box;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      color: #010205;
    }
    ::slotted(*:not([secondary])) {
      display: none;
    }
}

@media(hover:hover) {
    ::slotted(a:hover) {
      text-decoration-color: inherit;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .button {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: contents;
      position: absolute;
      inset: 0;
      inset-inline-start: clamp(338px, 210px + 18vw, 640px);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
    }
    .scroller {
      grid-area: 1/1/-1/-1;
      display: contents;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .back {
      width: fit-content;
      height: fit-content;
      margin-inline-start: -4px;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
      grid-area: 1/1/-1/-1;
    }
    .scroller::before {
      z-index: 1;
      content: "";
      position: sticky;
      top: 0;
      grid-area: 1/1/4/-1;
      background: linear-gradient(180deg,#FFF 0%,#FFF 65%,transparent 100%);
    }
    .button {
      display: none;
    }
    .back {
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: center flex-start;
      z-index: 2;
    }
}
"
`;

exports[`getComponentCss() should return correct css for isPrimary: true, isSecondary: true, isCascade: true and theme: light 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop-primary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
@keyframes slide-up-desktop-secondary {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: contents;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  slot {
    display: none;
  }
  h2 {
    display: none;
  }
  ::slotted(*:not([primary],[cascade])) {
    display: none;
  }
  ::slotted(a) {
    all: unset;
    align-self: flex-start;
    font: normal normal 400 clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
    cursor: pointer;
    border-radius: 4px;
    padding: clamp(8px, 0.5vw + 6px, 16px) !important;
    margin-inline: calc(clamp(8px, 0.5vw + 6px, 16px) * -1) !important;
    color: #010205;
    text-decoration: underline;
    text-decoration-color: transparent;
    transition: text-decoration-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  }
  ::slotted(a[aria-current]) {
    text-decoration: underline;
  }
  ::slotted(a::-moz-focus-inner) {
    border: 0;
  }
  ::slotted(a:focus) {
    outline: 0;
  }
  ::slotted(a:focus-visible) {
    outline: 2px solid #1A44EA;
    outline-offset: -2px;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
@media(min-width:760px) {
    slot {
      display: contents;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      height: fit-content;
      animation: slide-up-desktop-primary var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
      grid-area: 2/2/auto/-2;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
    }
}

@media(max-width:759px) {
    slot {
      z-index: 0;
      display: contents;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      grid-area: 4/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-mobile var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
    }
    h2 {
      font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
      display: block;
      grid-area: 2/3;
      place-self: center;
      z-index: 2;
      margin: 0;
      padding-inline: 16px;
      max-width: 100%;
      box-sizing: border-box;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      color: #010205;
    }
    ::slotted(*:not([secondary])) {
      display: none;
    }
}

@media(hover:hover) {
    ::slotted(a:hover) {
      text-decoration-color: inherit;
    }
}

  .scroller {
    display: none;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .button {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      display: contents;
      position: absolute;
      inset: 0;
      inset-inline-start: clamp(338px, 210px + 18vw, 640px);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px);
    }
    .scroller {
      grid-area: 1/1/-1/-1;
      display: contents;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .back {
      width: fit-content;
      height: fit-content;
      margin-inline-start: -4px;
    }
}

@media(max-width:759px) {
    .drawer {
      display: contents;
    }
    .scroller {
      display: contents;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
      grid-area: 1/1/-1/-1;
    }
    .scroller::before {
      z-index: 1;
      content: "";
      position: sticky;
      top: 0;
      grid-area: 1/1/4/-1;
      background: linear-gradient(180deg,#FFF 0%,#FFF 65%,transparent 100%);
    }
    .button {
      display: none;
    }
    .back {
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: center flex-start;
      z-index: 2;
    }
}
"
`;
